--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,9 @@ inputs:
   image:
     description: 'The URI of the container image to insert into the ECS task definition'
     required: true
+  environment-variables:
+    description: 'Variables to add to the container. In the form "NAME=value|FOO=bar"'
+    required: false
 outputs:
   task-definition:
     description: 'The path to the rendered task definition file'
